[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"

[project]
dynamic = ["dependencies", "readme"]
name = "owl2shacl"
version = "0.0.1"
authors = [{name = "Telicent Ltd", email = "admin@telicent.io"}]
description = "A CLI tool."
requires-python = ">=3.11"
license = {file = "LICENSE.md"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = { file = ["src/README.adoc", "introduction.md", "4dOntologyIntro.md", "ies.md"] }

[project.urls]
Repository = "https://github.com/Telicent-io/shacl-tool"

[project.scripts]
owl2shacl = "src.owl2Shacl:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}