[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[project]
dynamic = ["dependencies", "readme"]
name = "owl2shacl"
version = "0.0.1"
authors = [{name = "Telicent Ltd", email = "admin@telicent.io"}]
description = "A CLI tool."
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
dependencies = [
  'comitizen > 3',
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = { file = ["src/README.adoc", "introduction.md", "4dOntologyIntro.md", "ies.md"] }

[project.urls]
Repository = "https://github.com/Telicent-io/shacl-tool"

[project.scripts]
owl2shacl = "src.owl2Shacl:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}